components/CryptoChip/index.module.css
.container {
  padding: 0.5rem;
  border-radius: 0.5rem;
  display: flex;
  align-items: center;
  border: none;
  outline: none;
  background-color: transparent;
  border: 2px solid transparent;
  cursor: pointer;
  transition: 0.3s ease border-color;
}

@media (hover) {
  .container:hover {
    border-color: var(--primary-light);
  }
}

.imageContainer {
  width: max-content;
  display: grid;
  place-items: center;
  border-radius: 100rem;
  overflow: hidden;
}

.nameInfo {
  margin: 0 0.3rem;
  display: flex;
  align-items: center;
}

.name {
  color: var(--text);
  font-size: 1rem;
  margin: 0;
  margin-right: 0.3rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

@media (max-width: 480px) {
  .name {
    max-width: 5.5rem;
  }
}

.id {
  color: var(--text-tertiary);
  font-size: 1rem;
}

.priceInfo {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.price {
  font-size: 1.1rem;
  margin-right: 0.3rem;
}

.chevronUp {
  stroke: var(--success);
  width: 1.125rem;
  height: 1.125rem;
}

.chevronDown {
  stroke: var(--warning);
  width: 1.125rem;
  height: 1.125rem;
}

